--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@ sendReportBtn.addEventListener('click', async ()=>{
     return;
   }
 
-  if(WEBHOOK_URL === "GANTI_DENGAN_WEBHOOK_KAMU"){
+  if(WEBHOOK_URL === "https://discord.com/api/webhooks/1433278338910130308/0LALQ9yjgPrdiQEypPXVXpq3WzYmZgr-bg36FxCvnlyO8yuLW93u7ohabMdnPCZUPB4G"){
     showToast('⚠️ GANTI WEBHOOK URL terlebih dahulu di script.');
     return;
   }
